--- a/css/main.css
+++ b/css/main.css
@@ -9903,6 +9903,13 @@ h3 {
   padding: 0;
 }
 
+.easyzoom {
+  width: 100%;
+  border: 1px solid #dee2e6;
+  padding: 10px;
+  text-align: center;
+}
+
 .highlight {
   background: linear-gradient(45deg, #ffc107, transparent);
   padding: 10px 120px 10px 10px;
@@ -9927,7 +9934,9 @@ h3 {
   left: 0;
   width: 100%;
   height: 100%;
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .product__image {
   display: inline-block;
