--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -31,7 +31,9 @@
     left: 0;
     width: 100%;
     height: 100%;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   &__image {
